--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -443,6 +443,8 @@ svg{
     border: 2px solid #527a7a;
     background-color: #e0ebeb;
     overflow: hidden;
+    display: none;
+    transition: .3s ease-in;
 }
 
 .close-tab{
@@ -451,6 +453,7 @@ svg{
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    z-index: 2;
 }
 
 .close-tab button{
@@ -481,6 +484,13 @@ svg{
     background-color: rgba(240, 248, 255, 0.532);
     border-radius: 15px;
     padding: 1% 2%;
+}
+
+div.result:nth-of-type(1){
+    width: 100%;
+    display: grid;
+    align-items: center;
+    justify-content: center;
 }
 
 .editers h3{
@@ -518,7 +528,6 @@ svg{
     display: flex;
     align-items: center;
     margin: 0 auto;
-    display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     border-top: 1px solid #293d3d;
@@ -582,6 +591,7 @@ label[for="color"]{
     padding: 1% 2%;
     display: grid;
     align-items: center;
+    position: relative;
 }
 
 #extra-content{
@@ -621,6 +631,7 @@ label[for="color"]{
     padding-top: 13%;
   }
 
+
 .tag{
     display: block;
     width: 90%;
@@ -645,4 +656,113 @@ label[for="color"]{
     display: flex;
     justify-content: flex-end;
     gap: 15px;
+}
+
+
+#alert-edit{
+    width: 100%;
+    background-color: #cfe6e6;
+    padding: 1rem;
+    color: #293d3d;
+}
+
+section.editers{
+    display: grid;
+    align-items: center;
+    justify-content: center;
+}
+
+section.editers h3{
+    width: 100%;
+}
+
+section.editers .mini-edits{
+    width: 100%;
+}
+
+.two{
+    width: 100%;
+    height: 100%;
+    gap: 10px;
+    padding: 0 2%;
+    margin-top: -20px;
+    display: grid;
+    grid-auto-flow: column;
+}
+
+.two .result{
+    height: 100%;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+.two h3{
+    padding-bottom: 10px;
+}
+
+.two .mini-edits{ 
+    height: 93%;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    border-top: 1px solid #293d3d;
+    padding-top: 20px;
+    padding-bottom: 5px;
+}
+
+#diferentCLose{
+    height: 100px;
+    margin-bottom: -250px;
+}
+
+.btnTypes{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    gap: 12px;
+    align-items: center;
+}
+
+.btnTypes button{
+    width: 100%;
+    height: 50%;
+    border-radius: 12px;
+    color: white;
+    border: 1.3px solid;
+}
+
+.btnSucess{
+    background-color: #6cca8e;
+}
+
+.btnPrimary{
+     background-color: #6ca5e3;
+}
+
+.btnWarning{
+    background-color: #f7cb7b;
+}
+
+.btnError{
+    background-color: #f59685;
+}
+
+.in-btns{
+    position: absolute;
+    top: 20%;
+    right: 10%;
+}
+
+.in-btns button{
+    display: none;
+}
+
+
+#inSert{
+    width: 90%;
+    height: 200px;
+    margin: auto;
+    margin-top: -10%;
 }
