--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -766,3 +766,78 @@ section.editers .mini-edits{
     margin: auto;
     margin-top: -10%;
 }
+
+.card{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(240, 248, 255, 0.532);
+    padding: 1% 2%;
+}
+
+.card p{
+    width: 90%;
+    height: 30%;
+    text-align: center;
+}
+.card img{
+    width: 50%;
+}
+.card button{
+    margin-top: -35px;
+}
+
+
+aside div.me-2{
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 12px;
+    align-items: center;
+}
+
+aside div.me-2 *{
+    width: 50%;
+    height: 50%;
+}
+
+#Sselct-card{
+    border: 1px solid;
+    width: 92%;
+    height: 30px;
+    border-radius: 12px;
+    padding-left: 10px;
+}
+
+.tcSelct{
+    width: 90%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+input#text-addCar{
+    width: 100%;
+    padding-left: 12px;
+    border-radius: 12px;
+    border: 2px solid rgba(128, 128, 128, 0.289);
+}
+
+.me-2 .btnImg{
+    width: 100px;
+    background-color: #527a7a;
+    height: 50px;
+    padding: 0;
+}
+
+.me-2 .btnImg img{
+    width: 100%;
+    height: 100%;
+}
+
+
+#editers-1{
+    display: none;
+}
