--- a/assets/css/general-effects.css
+++ b/assets/css/general-effects.css
@@ -98,3 +98,15 @@ body#dark{
 #takeHover:hover .in-btns button{
     display: flex;
 }
+
+.btnType:hover{
+    border: 1px solid #6ca6e3ba;
+    background-color: transparent;
+    color: #141f1f;
+}
+
+#codeInBlock button:hover{
+    border: 1px solid;
+    background-color: #527a7a;
+    color: #141f1f;
+}
