--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -909,10 +909,13 @@ input#text-addCar{
     justify-content: center;
 }
 
-#codeInBlock button{
+#codeInBlock a{
     width: 50%;
     height: 35px;
     border-radius: 12px;
     border: 1px solid #527a7a;
     margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
